--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,11 @@
 body{
     font-family: 'Poppins', sans-serif;
     background-color: #EAF2F5;
+    width: 100vw;
 }
 #messages{
     width: 80%;
-    height: 400px;
+    height: 420px;
     overflow: auto;
     border: 2px solid #ced1d39a;
     /* box-shadow: 0 0 1em #2121fd71; */
@@ -19,18 +20,23 @@ body{
 }
 
 #message{
-    width:80%;
+    width:100%;
     height:100px;
-    border:none;
-    outline:none;
+    border:2px solid #ced1d39a;
+    outline:none; 
     padding-left: 10px;
 }
+
+.online{
+    border:2px solid red;
+}
+
 
 ul{
     list-style-type: none;
 }
 li{
-    margin-bottom: 17px;
+    margin-bottom: 15px;
 }
 
 .bgmodal{
