--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,3 +56,9 @@ li{
     border: 2px solid #3a454ede;
     box-shadow: 0 0 1em #2121fd71;
 }
+
+footer{
+    width: 100%;
+    height: 250px;
+    background-color: gray;
+}
